# project-based-learning

./: AndroidManifest.xml  CMakeLists.txt  MemoryService.java  build.gradle  memory_engine.cpp  settings.gradle
.github/workflows/: android_build.yml  derleme.yml
app/: CMakeLists.txt  build.gradle  memory_engine.cpp  root_daemon.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/.../: OverlayService.java
app/src/main/java/com/example/mycustomapk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  overlay_icon.xml  overlay_menu.xml
gradle/wrapper/: gradle-wrapper.properties
